--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Define the root logger with appender file
 log=src/main/resources
-log4j.rootLogger=DEBUG, info, stdout, file
+log4j.rootLogger=info, stdout, file
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
